// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImportArtifactModal.vue > Should let the user edit the name and ABI when parameters are valid 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Update Contract Metadata</div>
    <div class="v-card-text">
      <div class="v-alert v-theme--light bg-success v-alert--density-default v-alert--variant-flat" role="alert">Metadata updated</div>
      <!--v-if-->
      <div class="mb-3"> Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br> Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail. </div>
      <div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-3">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractName">
                  <!---->Contract Name
                </label>
                <!----><input size="1" type="text" id="contractName" aria-describedby="contractName-messages" primary="" class="v-field__input" value="DSProxyFactory">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractName">
                    <!---->Contract Name
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-textarea v-text-field">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractAbi">
                  <!---->ABI
                </label>
                <!----><textarea class="v-field__input" rows="5" id="contractAbi" aria-describedby="contractAbi-messages" primary="" value="[{&quot;outputs&quot;:[{&quot;type&quot;:&quot;bool&quot;,&quot;name&quot;:&quot;&quot;}],&quot;constant&quot;:true,&quot;inputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;&quot;}],&quot;stateMutability&quot;:&quot;view&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;isProxy&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;&quot;}],&quot;constant&quot;:true,&quot;inputs&quot;:[],&quot;stateMutability&quot;:&quot;view&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;cache&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;}],&quot;constant&quot;:false,&quot;inputs&quot;:[],&quot;stateMutability&quot;:&quot;nonpayable&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;build&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;}],&quot;constant&quot;:false,&quot;inputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;owner&quot;}],&quot;stateMutability&quot;:&quot;nonpayable&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;build&quot;},{&quot;inputs&quot;:[{&quot;indexed&quot;:true,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;sender&quot;},{&quot;indexed&quot;:true,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;owner&quot;},{&quot;indexed&quot;:false,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;},{&quot;indexed&quot;:false,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;cache&quot;}],&quot;type&quot;:&quot;event&quot;,&quot;name&quot;:&quot;Created&quot;,&quot;anonymous&quot;:false}]"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractAbi">
                    <!---->ABI
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <hr class="v-divider v-theme--light my-3" aria-orientation="horizontal" role="separator"> Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br><input type="file" id="fileUploader" accept="application/json">
      </div>
    </div>
    <div class="v-card-actions">
      <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Close</span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" id="updateContract"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Update</span>
        <!---->
        <!---->
      </button>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ImportArtifactModal.vue > Should let the user upload a file containing contract metadata 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Update Contract Metadata</div>
    <div class="v-card-text">
      <div class="v-alert v-theme--light bg-success v-alert--density-default v-alert--variant-flat" role="alert">Metadata updated</div>
      <!--v-if-->
      <div class="mb-3"> Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br> Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail. </div>
      <div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-3">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractName">
                  <!---->Contract Name
                </label>
                <!----><input size="1" type="text" id="contractName" aria-describedby="contractName-messages" primary="" class="v-field__input" value="DSProxyFactory">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractName">
                    <!---->Contract Name
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-textarea v-text-field">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractAbi">
                  <!---->ABI
                </label>
                <!----><textarea class="v-field__input" rows="5" id="contractAbi" aria-describedby="contractAbi-messages" primary="" value="[{&quot;outputs&quot;:[{&quot;type&quot;:&quot;bool&quot;,&quot;name&quot;:&quot;&quot;}],&quot;constant&quot;:true,&quot;inputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;&quot;}],&quot;stateMutability&quot;:&quot;view&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;isProxy&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;&quot;}],&quot;constant&quot;:true,&quot;inputs&quot;:[],&quot;stateMutability&quot;:&quot;view&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;cache&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;}],&quot;constant&quot;:false,&quot;inputs&quot;:[],&quot;stateMutability&quot;:&quot;nonpayable&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;build&quot;},{&quot;outputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;}],&quot;constant&quot;:false,&quot;inputs&quot;:[{&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;owner&quot;}],&quot;stateMutability&quot;:&quot;nonpayable&quot;,&quot;type&quot;:&quot;function&quot;,&quot;payable&quot;:false,&quot;name&quot;:&quot;build&quot;},{&quot;inputs&quot;:[{&quot;indexed&quot;:true,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;sender&quot;},{&quot;indexed&quot;:true,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;owner&quot;},{&quot;indexed&quot;:false,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;proxy&quot;},{&quot;indexed&quot;:false,&quot;type&quot;:&quot;address&quot;,&quot;name&quot;:&quot;cache&quot;}],&quot;type&quot;:&quot;event&quot;,&quot;name&quot;:&quot;Created&quot;,&quot;anonymous&quot;:false}]"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractAbi">
                    <!---->ABI
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <hr class="v-divider v-theme--light my-3" aria-orientation="horizontal" role="separator"> Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br><input type="file" id="fileUploader" accept="application/json">
      </div>
    </div>
    <div class="v-card-actions">
      <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Close</span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" id="updateContract"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Update</span>
        <!---->
        <!---->
      </button>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ImportArtifactModal.vue > Should warn the user if the ABI is not valid 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Update Contract Metadata</div>
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-alert v-theme--light bg-error v-alert--density-default v-alert--variant-flat" role="alert">Invalid ABI</div>
      <div class="mb-3"> Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br> Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail. </div>
      <div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-3">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractName">
                  <!---->Contract Name
                </label>
                <!----><input size="1" type="text" id="contractName" aria-describedby="contractName-messages" primary="" class="v-field__input" value="DSProxyFactory">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractName">
                    <!---->Contract Name
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-textarea v-text-field">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractAbi">
                  <!---->ABI
                </label>
                <!----><textarea class="v-field__input" rows="5" id="contractAbi" aria-describedby="contractAbi-messages" primary="" value="{ &quot;a&quot;: 1 }"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractAbi">
                    <!---->ABI
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <hr class="v-divider v-theme--light my-3" aria-orientation="horizontal" role="separator"> Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br><input type="file" id="fileUploader" accept="application/json">
      </div>
    </div>
    <div class="v-card-actions">
      <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Close</span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" id="updateContract"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Update</span>
        <!---->
        <!---->
      </button>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ImportArtifactModal.vue > Should warn the user if the ABI is not valid json 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Update Contract Metadata</div>
    <div class="v-card-text">
      <!--v-if-->
      <div class="v-alert v-theme--light bg-error v-alert--density-default v-alert--variant-flat" role="alert">Invalid JSON format</div>
      <div class="mb-3"> Edit the name and the ABI of this contract to be able to interact with its read/write methods, decode functions calls &amp; events emitted.<br> Only the formatting of the ABI is checked, it's up to you to make sure it is valid for the current address. If it's not, calls will fail. </div>
      <div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-3">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractName">
                  <!---->Contract Name
                </label>
                <!----><input size="1" type="text" id="contractName" aria-describedby="contractName-messages" primary="" class="v-field__input" value="DSProxyFactory">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractName">
                    <!---->Contract Name
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-textarea v-text-field">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="contractAbi">
                  <!---->ABI
                </label>
                <!----><textarea class="v-field__input" rows="5" id="contractAbi" aria-describedby="contractAbi-messages" primary="" value="{ a: 1 }"></textarea>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="contractAbi">
                    <!---->ABI
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <hr class="v-divider v-theme--light my-3" aria-orientation="horizontal" role="separator"> Or upload a json file containing a <b>contractName</b> field and/or an <b>abi</b> field (a Truffle or Hardhat build file for example):<br><input type="file" id="fileUploader" accept="application/json">
      </div>
    </div>
    <div class="v-card-actions">
      <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Close</span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" id="updateContract"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Update</span>
        <!---->
        <!---->
      </button>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
